--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
   <script type="module">
     // ---------------- FIREBASE IMPORTS ----------------
-    import { initializeApp } from "firebase/app";
-    import { getAnalytics } from "firebase/analytics";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-analytics.js";
    
     // ---------------- CONFIGURAÇÃO DO SEU PROJETO ----------------
     const firebaseConfig = {
